--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=never
 #
 #
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.datasource.username=sa
 spring.datasource.password=
-#
 ## url
 ##spring.datasource.url=jdbc:h2:tcp://localhost/~/db/jdbc-course
 spring.datasource.url=jdbc:h2:tcp://localhost/~/db/sda
 ## driver
 spring.datasource.driver-class-name=org.h2.Driver
+
